--- a/troll_a_friend/troll_a_friend.vcxproj.filters
+++ b/troll_a_friend/troll_a_friend.vcxproj.filters
@@ -24,12 +24,21 @@
     <ClCompile Include="keyboardInputActionMaker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SocketCommunicator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="keyboardInputCreator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="keyboardInputActionMaker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IReadWrite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SocketCommunicator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
